[project]
name = "hub-docs-mining"
version = "0.1.0"
description = "Mine the Seattle Emergency Hubs Drive audit for Hub Reference Library candidates and corpus descriptions."
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "openai>=1.50",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "tomli-w>=1.0",
    "pillow>=10.4",
    "python-dotenv>=1.0",
]

[project.scripts]
hub-docs-mining = "hub_docs_mining.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hub_docs_mining"]
